packages/compiler/tests/fixtures/invalid/browser-raf.svelte
<script>
  requestAnimationFrame(() => {})
</script>
<text>RAF</text>
